crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@410.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT jsonb_path_exists('[{\"a\": 1}, {\"a\": 2}, {\"a\": 3}, {\"a\": 5}]', '$[*] ? (@.a > $min && @.a < $max)', vars => '{\"min\": 1, \"max\": 4}');"
---
SelectStmt@0..138
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..136
    FuncCall@7..136
      Ident@7..24 "jsonb_path_exists"
      Ascii40@24..25 "("
      AConst@25..67
        Sconst@25..67 "'[{\"a\": 1}, {\"a\": 2}, ..."
      Ascii44@67..68 ","
      Whitespace@68..69 " "
      AConst@69..104
        Sconst@69..104 "'$[*] ? (@.a > $min & ..."
      Ascii44@104..105 ","
      Whitespace@105..106 " "
      NamedArgExpr@106..136
        Ident@106..110 "vars"
        Whitespace@110..111 " "
        EqualsGreater@111..113 "=>"
        Whitespace@113..114 " "
        AConst@114..136
          Sconst@114..136 "'{\"min\": 1, \"max\": 4}'"
  Ascii41@136..137 ")"
  Ascii59@137..138 ";"

