crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@412.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT jsonb_path_match('true', '$', silent => false);"
---
SelectStmt@0..54
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..52
    FuncCall@7..52
      Ident@7..23 "jsonb_path_match"
      Ascii40@23..24 "("
      AConst@24..30
        Sconst@24..30 "'true'"
      Ascii44@30..31 ","
      Whitespace@31..32 " "
      AConst@32..35
        Sconst@32..35 "'$'"
      Ascii44@35..36 ","
      Whitespace@36..37 " "
      NamedArgExpr@37..52
        Ident@37..43 "silent"
        Whitespace@43..44 " "
        EqualsGreater@44..46 "=>"
        Whitespace@46..47 " "
        AConst@47..52
          FalseP@47..52 "false"
  Ascii41@52..53 ")"
  Ascii59@53..54 ";"

