crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@417.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT jsonb_path_match('\"a\"', '$', silent => false);"
---
SelectStmt@0..53
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..51
    FuncCall@7..51
      Ident@7..23 "jsonb_path_match"
      Ascii40@23..24 "("
      AConst@24..29
        Sconst@24..29 "'\"a\"'"
      Ascii44@29..30 ","
      Whitespace@30..31 " "
      AConst@31..34
        Sconst@31..34 "'$'"
      Ascii44@34..35 ","
      Whitespace@35..36 " "
      NamedArgExpr@36..51
        Ident@36..42 "silent"
        Whitespace@42..43 " "
        EqualsGreater@43..45 "=>"
        Whitespace@45..46 " "
        AConst@46..51
          FalseP@46..51 "false"
  Ascii41@51..52 ")"
  Ascii59@52..53 ";"

