crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@418.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT jsonb_path_match('{}', '$', silent => false);"
---
SelectStmt@0..52
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..50
    FuncCall@7..50
      Ident@7..23 "jsonb_path_match"
      Ascii40@23..24 "("
      AConst@24..28
        Sconst@24..28 "'{}'"
      Ascii44@28..29 ","
      Whitespace@29..30 " "
      AConst@30..33
        Sconst@30..33 "'$'"
      Ascii44@33..34 ","
      Whitespace@34..35 " "
      NamedArgExpr@35..50
        Ident@35..41 "silent"
        Whitespace@41..42 " "
        EqualsGreater@42..44 "=>"
        Whitespace@44..45 " "
        AConst@45..50
          FalseP@45..50 "false"
  Ascii41@50..51 ")"
  Ascii59@51..52 ";"

